--- a/anime.html
+++ b/anime.html
@@ -18,103 +18,174 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
 
 </head>
+
 <body>
-<main>
+  <main>
     <section class="edit" style="display: none;">
-        <div class="edit-syze">
-            <div style="width: 100%;"><a class="back">⟵</a><div>
-            <div class="episode-sel">Выбор эпизода</div><hr>
+      <div class="edit-syze">
+        <div style="width: 100%;"><a class="back">🠔</a>
+          <div>
+            <div class="episode-sel">Выбор эпизода</div>
+            <hr>
             <div class="episode-selecter">
-            <a href="#">
-                <div><img src="https://sun9-1.userapi.com/impg/Bgj4JZ7FycgrOrDF_eptBN1ZSod9KcxZP8U2YA/HE-43jbaXwo.jpg?size=1920x1080&quality=96&sign=2ed1f038e6bcf4bf66afbef038454879&type=album"></div>
+              <a href="#">
+                <div><img src="https://fumodub.ru/uploads/posts/2022-07/-eqqt0fnofo.jpg"></div>
                 <div><span>Песнь ночных сов,  1 эпизод</span></div>
-            </a>
-            <a href="#">
-                <div><img src="https://sun9-1.userapi.com/impg/Bgj4JZ7FycgrOrDF_eptBN1ZSod9KcxZP8U2YA/HE-43jbaXwo.jpg?size=1920x1080&quality=96&sign=2ed1f038e6bcf4bf66afbef038454879&type=album"></div>
+              </a>
+              <a href="#">
+                <div><img src="https://fumodub.ru/uploads/posts/2022-07/-eqqt0fnofo.jpg"></div>
                 <div><span>Песнь ночных сов,  1 эпизод</span></div>
-            </a>
-            <a href="#">
-                <div><img src="https://sun9-1.userapi.com/impg/Bgj4JZ7FycgrOrDF_eptBN1ZSod9KcxZP8U2YA/HE-43jbaXwo.jpg?size=1920x1080&quality=96&sign=2ed1f038e6bcf4bf66afbef038454879&type=album"></div>
+              </a>
+              <a href="#">
+                <div><img src="https://fumodub.ru/uploads/posts/2022-07/-eqqt0fnofo.jpg"></div>
                 <div><span>Песнь ночных сов,  1 эпизод</span></div>
-            </a>
-            <a href="#">
-                <div><img src="https://sun9-1.userapi.com/impg/Bgj4JZ7FycgrOrDF_eptBN1ZSod9KcxZP8U2YA/HE-43jbaXwo.jpg?size=1920x1080&quality=96&sign=2ed1f038e6bcf4bf66afbef038454879&type=album"></div>
+              </a>
+              <a href="#">
+                <div><img src="https://fumodub.ru/uploads/posts/2022-07/-eqqt0fnofo.jpg"></div>
                 <div><span>Песнь ночных сов,  1 эпизод</span></div>
-            </a>
-            <a href="#">
-                <div><img src="https://sun9-1.userapi.com/impg/Bgj4JZ7FycgrOrDF_eptBN1ZSod9KcxZP8U2YA/HE-43jbaXwo.jpg?size=1920x1080&quality=96&sign=2ed1f038e6bcf4bf66afbef038454879&type=album"></div>
+              </a>
+              <a href="#">
+                <div><img src="https://fumodub.ru/uploads/posts/2022-07/-eqqt0fnofo.jpg"></div>
                 <div><span>Песнь ночных сов,  1 эпизод</span></div>
-            </a>
-            <a href="#">
-                <div><img src="https://sun9-1.userapi.com/impg/Bgj4JZ7FycgrOrDF_eptBN1ZSod9KcxZP8U2YA/HE-43jbaXwo.jpg?size=1920x1080&quality=96&sign=2ed1f038e6bcf4bf66afbef038454879&type=album"></div>
+              </a>
+              <a href="#">
+                <div><img src="https://fumodub.ru/uploads/posts/2022-07/-eqqt0fnofo.jpg"></div>
                 <div><span>Песнь ночных сов,  1 эпизод</span></div>
-            </a>
-            <a href="#">
-                <div><img src="https://sun9-1.userapi.com/impg/Bgj4JZ7FycgrOrDF_eptBN1ZSod9KcxZP8U2YA/HE-43jbaXwo.jpg?size=1920x1080&quality=96&sign=2ed1f038e6bcf4bf66afbef038454879&type=album"></div>
+              </a>
+              <a href="#">
+                <div><img src="https://fumodub.ru/uploads/posts/2022-07/-eqqt0fnofo.jpg"></div>
                 <div><span>Песнь ночных сов,  1 эпизод</span></div>
-            </a>
+              </a>
             </div>
-        </div>
-        <section class="otstup2"></section>
+          </div>
+          <section class="otstup2"></section>
     </section>
     <section>
-        <div class="anime-poster">
+      <div class="anime-poster">
         <img src="https://sun9-1.userapi.com/impg/QQ3nWYxH05i30C1YTaopgu-JaPikgeB6P8sgtQ/achJhjMHnrc.jpg?size=1528x2160&quality=96&sign=d197694852fe8444b409da7f414b5846&type=album">
+      </div>
+    </section>
+    <section>
+      <div class="anime-name">
+        <div class="title-ru">Мастера Меча Онлайн: Прогрессив, Скерцо глубокой ночи</div>
+        <div class="title-tr">Sword Art Online: Progressive Movie - Kuraki Yuuyami no Scherzo</div>
+      </div>
+    </section>
+    <section>
+      <div>
+        <a class="play-btn"><img src="assets/img/play2.svg">
+          <div>Смотреть</div>
+        </a>
+      </div>
+    </section>
+    <section>
+      <div class="anime-info">
+        <div><span class="anime-info-text">16+</span>|<span class="anime-info-text">2022г.</span>|<span class="anime-info-text">Япония</span></div>
+        <div><span>Тип: </span><span class="anime-info-text">TV Сериал</span></div>
+        <div><span>Эпизоды: </span><span class="anime-info-text">4 / 13</span></div>
+        <div><span>Следующий эпизод: </span><span class="anime-info-text">4 авг. 18:55</span></div>
+        <div><span>Длительность эпизода: </span><span class="anime-info-text">23 мин.</span></div>
+        <div><span>Статус: </span><span class="anime-info-text">онгоинг с 8 июля 2022 г.</span></div>
+        <div><span>Рейтинг: </span><span class="anime-info-text">PG-13</span></div>
+        <div><span>По-японски: </span><span class="anime-info-text">よふかしのうた</span></div>
+        <div><span>по-английски: </span><span class="anime-info-text">Call of the Night</span></div>
+        <div class="genres"><a href="#">Сёнен</a>, <a href="#">романтика</a>, <a href="#">вампиры</a></div>
+        <div class="description-size">
+          <div hidden class="description">Кто совершал ночные прогулки, наверняка, скажет, что они прекрасны. Отсутствие людей, машин и прочих раздражителей, шарм тёмного времени суток и непередаваемое чувство свободы — такая атмосфера никого не оставит равнодушным. Вот и четырнадцатилетний ученик средней школы Ко Ямори, которого мучила бессонница и который поэтому решил выйти прогуляться, был обворожён. Слоняясь по пустым улицам, парень встретил загадочную девушку по имени Надзуна Нанакуса, которая показала мальцу все прелести ночной жизни. Закончились их совместные приключения тем, что вскоре Ко уже делил футон с Надзуной, которая, решив, что паренёк заснул, взяла и укусила его за шею!</div>
+          <button class="show_description">Описание</button>
         </div>
+      </div>
+      <hr>
+      <script>
+        $('.show_description').on('click', function() {
+          if ($(this).prev().is(':visible')) {
+            $(this).text('Описание');
+            $(this).prev().hide('slow');
+          } else {
+            $(this).text('Скрыть описание');
+            $(this).prev().show('slow');
+          }
+        });
+      </script>
     </section>
     <section>
-        <div class="anime-name">
-            <div class="title-ru">Мастера Меча Онлайн: Прогрессив, Скерцо глубокой ночи</div>
-            <div class="title-tr">Sword Art Online: Progressive Movie - Kuraki Yuuyami no Scherzo</div>
+      <div class="comments-all">
+        <div class="commentss"><span class="comments-title">Комментарии </span><span class="comments-num">(228 шт)</span></div>
+        <div class="comments-add">
+          <textarea id="comments" placeholder="Напишите своё мнение"></textarea>
+          <div class="comments-btn">
+            <button id="clear">Очистить</button>
+            <button class="submit">Отправить</button>
+          </div>
+          <script>
+            var input = document.querySelector('#clear');
+            var textarea = document.querySelector('#comments');
+            input.addEventListener('click', function() {
+              textarea.value = '';
+            }, false)
+          </script>
         </div>
-    </section>
-    <section>
-        <div><a class="play-btn"><img src="assets/img/play2.svg"><div>Смотреть</div></a></div>
-    </section>
-    <section>
-        <div></div>
+        <div class="comments-complete">
+          <div class="comments-autor">
+            <img class="comments-avatar" src="https://static-cdn.jtvnw.net/jtv_user_pictures/28e82167-793b-49cc-a46d-c626dfbd9c00-profile_image-300x300.png">
+            <div class="comments-info">
+              <span class="comments-name">S4NN3R</span>
+              <span class="comments-time">27.08.2022</span>
+            </div>
+            <div class="comments-rating">
+              <!--Я не помню как именно прописывается рейтинг в DLE поэтому пусть оно будет пустым-->
+              <div>
+                +5
+              </div>
+            </div>
+          </div>
+          <div class="comments-text">Кто совершал ночные прогулки, наверняка, скажет, что они прекрасны. Отсутствие людей, машин и прочих раздражителей, шарм тёмного времени суток и непередаваемое чувство свободы — такая атмосфера никого не оставит равнодушным.</div>
+          <div class="comments-reply"><a>Ответить</a></div>
+        </div>
+      </div>
     </section>
     <script>
-        $('.play-btn').click(function(){
+      $('.play-btn').click(function() {
         $('.edit').toggle();
-        });
+      });
     </script>
-        <script>
-            $('.back').click(function(){
-            $('.edit').toggle();
-            });
-        </script>
-                  <script>
-                    $(function() {
-                      var height = $('footer').height();
-                      $('.otstup2').height(height);
-                    });
-                  </script>
-        <section class="otstup2"></section>
-</main>
+    <script>
+      $('.back').click(function() {
+        $('.edit').toggle();
+      });
+    </script>
+    <script>
+      $(function() {
+        var height = $('footer').height();
+        $('.otstup2').height(height);
+      });
+    </script>
+    <section class="otstup2"></section>
+  </main>
 </body>
 <footer>
-    <div class="buttons">
-        <a class="points-button" href="index.html">
-            <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M32.7645 16.1686L21.0978 5.96022C20.4695 5.41039 19.5312 5.41039 18.9028 5.96022L7.23615 16.1686C6.87446 16.485 6.66699 16.9422 6.66699 17.4229V31.6666C6.66699 32.587 7.41318 33.3332 8.33366 33.3332H15.0003C15.9208 33.3332 16.667 32.587 16.667 31.6666V24.9999C16.667 24.0794 17.4132 23.3332 18.3337 23.3332H21.667C22.5875 23.3332 23.3337 24.0794 23.3337 24.9999V31.6666C23.3337 32.587 24.0799 33.3332 25.0003 33.3332H31.667C32.5875 33.3332 33.3337 32.587 33.3337 31.6666V17.4229C33.3337 16.9422 33.1262 16.485 32.7645 16.1686Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-            </svg>      
-            <small>Главная</small>
-        </a>
-        <a class="points-button" href="#"> 
-            <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M20 34.625C28.0772 34.625 34.625 28.0772 34.625 20C34.625 11.9228 28.0772 5.375 20 5.375C11.9228 5.375 5.375 11.9228 5.375 20C5.375 28.0772 11.9228 34.625 20 34.625Z" stroke="currentColor" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
-                <path d="M26.5 13.5L22.4375 22.4375L13.5 26.5L17.5625 17.5625L26.5 13.5Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-            </svg> 
-            <small>Поиск</small>
-        </a>
-        <a class="points-button" href="profile.html">
-            <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M6.6665 35.0001C6.6665 30.3977 12.636 26.6667 19.9998 26.6667C27.3636 26.6667 33.3332 30.3977 33.3332 35.0001" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-                <path d="M19.9998 21.6667C24.6022 21.6667 28.3332 17.9357 28.3332 13.3333C28.3332 8.73096 24.6022 5 19.9998 5C15.3975 5 11.6665 8.73096 11.6665 13.3333C11.6665 17.9357 15.3975 21.6667 19.9998 21.6667Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-            </svg>
-            <small>Профиль</small>
-        </a>
-    </div>
+  <div class="buttons">
+    <a class="points-button" href="index.html">
+      <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M32.7645 16.1686L21.0978 5.96022C20.4695 5.41039 19.5312 5.41039 18.9028 5.96022L7.23615 16.1686C6.87446 16.485 6.66699 16.9422 6.66699 17.4229V31.6666C6.66699 32.587 7.41318 33.3332 8.33366 33.3332H15.0003C15.9208 33.3332 16.667 32.587 16.667 31.6666V24.9999C16.667 24.0794 17.4132 23.3332 18.3337 23.3332H21.667C22.5875 23.3332 23.3337 24.0794 23.3337 24.9999V31.6666C23.3337 32.587 24.0799 33.3332 25.0003 33.3332H31.667C32.5875 33.3332 33.3337 32.587 33.3337 31.6666V17.4229C33.3337 16.9422 33.1262 16.485 32.7645 16.1686Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+      </svg>
+      <small>Главная</small>
+    </a>
+    <a class="points-button" href="#">
+      <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M20 34.625C28.0772 34.625 34.625 28.0772 34.625 20C34.625 11.9228 28.0772 5.375 20 5.375C11.9228 5.375 5.375 11.9228 5.375 20C5.375 28.0772 11.9228 34.625 20 34.625Z" stroke="currentColor" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
+        <path d="M26.5 13.5L22.4375 22.4375L13.5 26.5L17.5625 17.5625L26.5 13.5Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+      </svg>
+      <small>Поиск</small>
+    </a>
+    <a class="points-button" href="profile.html">
+      <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M6.6665 35.0001C6.6665 30.3977 12.636 26.6667 19.9998 26.6667C27.3636 26.6667 33.3332 30.3977 33.3332 35.0001" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+        <path d="M19.9998 21.6667C24.6022 21.6667 28.3332 17.9357 28.3332 13.3333C28.3332 8.73096 24.6022 5 19.9998 5C15.3975 5 11.6665 8.73096 11.6665 13.3333C11.6665 17.9357 15.3975 21.6667 19.9998 21.6667Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+      </svg>
+      <small>Профиль</small>
+    </a>
+  </div>
 </footer>
+
 </html>
