--- a/anime.html
+++ b/anime.html
@@ -23,37 +23,53 @@
   <main>
     <section class="edit" style="display: none;">
       <div class="edit-syze">
-        <div style="width: 100%;"><a class="back">🠔</a>
+        <div style="width: 100%;"><a class="back">˂</a>
           <div>
             <div class="episode-sel">Выбор эпизода</div>
             <hr>
             <div class="episode-selecter">
               <a href="#">
-                <div><img src="https://fumodub.ru/uploads/posts/2022-07/-eqqt0fnofo.jpg"></div>
+                <div><img src="https://sun9-1.userapi.com/impg/Bgj4JZ7FycgrOrDF_eptBN1ZSod9KcxZP8U2YA/HE-43jbaXwo.jpg?size=1920x1080&quality=96&sign=2ed1f038e6bcf4bf66afbef038454879&type=album"></div>
                 <div><span>Песнь ночных сов,  1 эпизод</span></div>
               </a>
               <a href="#">
-                <div><img src="https://fumodub.ru/uploads/posts/2022-07/-eqqt0fnofo.jpg"></div>
+                <div><img src="https://sun9-1.userapi.com/impg/Bgj4JZ7FycgrOrDF_eptBN1ZSod9KcxZP8U2YA/HE-43jbaXwo.jpg?size=1920x1080&quality=96&sign=2ed1f038e6bcf4bf66afbef038454879&type=album"></div>
                 <div><span>Песнь ночных сов,  1 эпизод</span></div>
               </a>
               <a href="#">
-                <div><img src="https://fumodub.ru/uploads/posts/2022-07/-eqqt0fnofo.jpg"></div>
+                <div><img src="https://sun9-1.userapi.com/impg/Bgj4JZ7FycgrOrDF_eptBN1ZSod9KcxZP8U2YA/HE-43jbaXwo.jpg?size=1920x1080&quality=96&sign=2ed1f038e6bcf4bf66afbef038454879&type=album"></div>
                 <div><span>Песнь ночных сов,  1 эпизод</span></div>
               </a>
               <a href="#">
-                <div><img src="https://fumodub.ru/uploads/posts/2022-07/-eqqt0fnofo.jpg"></div>
+                <div><img src="https://sun9-1.userapi.com/impg/Bgj4JZ7FycgrOrDF_eptBN1ZSod9KcxZP8U2YA/HE-43jbaXwo.jpg?size=1920x1080&quality=96&sign=2ed1f038e6bcf4bf66afbef038454879&type=album"></div>
                 <div><span>Песнь ночных сов,  1 эпизод</span></div>
               </a>
               <a href="#">
-                <div><img src="https://fumodub.ru/uploads/posts/2022-07/-eqqt0fnofo.jpg"></div>
+                <div><img src="https://sun9-1.userapi.com/impg/Bgj4JZ7FycgrOrDF_eptBN1ZSod9KcxZP8U2YA/HE-43jbaXwo.jpg?size=1920x1080&quality=96&sign=2ed1f038e6bcf4bf66afbef038454879&type=album"></div>
                 <div><span>Песнь ночных сов,  1 эпизод</span></div>
               </a>
               <a href="#">
-                <div><img src="https://fumodub.ru/uploads/posts/2022-07/-eqqt0fnofo.jpg"></div>
+                <div><img src="https://sun9-1.userapi.com/impg/Bgj4JZ7FycgrOrDF_eptBN1ZSod9KcxZP8U2YA/HE-43jbaXwo.jpg?size=1920x1080&quality=96&sign=2ed1f038e6bcf4bf66afbef038454879&type=album"></div>
                 <div><span>Песнь ночных сов,  1 эпизод</span></div>
               </a>
               <a href="#">
-                <div><img src="https://fumodub.ru/uploads/posts/2022-07/-eqqt0fnofo.jpg"></div>
+                <div><img src="https://sun9-1.userapi.com/impg/Bgj4JZ7FycgrOrDF_eptBN1ZSod9KcxZP8U2YA/HE-43jbaXwo.jpg?size=1920x1080&quality=96&sign=2ed1f038e6bcf4bf66afbef038454879&type=album"></div>
+                <div><span>Песнь ночных сов,  1 эпизод</span></div>
+              </a>
+              <a href="#">
+                <div><img src="https://sun9-1.userapi.com/impg/Bgj4JZ7FycgrOrDF_eptBN1ZSod9KcxZP8U2YA/HE-43jbaXwo.jpg?size=1920x1080&quality=96&sign=2ed1f038e6bcf4bf66afbef038454879&type=album"></div>
+                <div><span>Песнь ночных сов,  1 эпизод</span></div>
+              </a>
+              <a href="#">
+                <div><img src="https://sun9-1.userapi.com/impg/Bgj4JZ7FycgrOrDF_eptBN1ZSod9KcxZP8U2YA/HE-43jbaXwo.jpg?size=1920x1080&quality=96&sign=2ed1f038e6bcf4bf66afbef038454879&type=album"></div>
+                <div><span>Песнь ночных сов,  1 эпизод</span></div>
+              </a>
+              <a href="#">
+                <div><img src="https://sun9-1.userapi.com/impg/Bgj4JZ7FycgrOrDF_eptBN1ZSod9KcxZP8U2YA/HE-43jbaXwo.jpg?size=1920x1080&quality=96&sign=2ed1f038e6bcf4bf66afbef038454879&type=album"></div>
+                <div><span>Песнь ночных сов,  1 эпизод</span></div>
+              </a>
+              <a href="#">
+                <div><img src="https://sun9-1.userapi.com/impg/Bgj4JZ7FycgrOrDF_eptBN1ZSod9KcxZP8U2YA/HE-43jbaXwo.jpg?size=1920x1080&quality=96&sign=2ed1f038e6bcf4bf66afbef038454879&type=album"></div>
                 <div><span>Песнь ночных сов,  1 эпизод</span></div>
               </a>
             </div>
