--- a/anime.html
+++ b/anime.html
@@ -76,15 +76,23 @@
           </div>
           <section class="otstup2"></section>
     </section>
+    <script>
+        $(function() {
+          $('.poster').height($('.poster').width() / 0.7);
+          $(window).resize(function() {
+            $('.poster').height($('.poster').width() / 0.7);
+          });
+        });
+      </script>
     <section>
       <div class="anime-poster">
-        <img src="https://sun9-1.userapi.com/impg/QQ3nWYxH05i30C1YTaopgu-JaPikgeB6P8sgtQ/achJhjMHnrc.jpg?size=1528x2160&quality=96&sign=d197694852fe8444b409da7f414b5846&type=album">
+        <img class="poster" src="https://sun9-81.userapi.com/impg/zd0Lzey35mlkDOwpbKhk7TF5UEhVyXlZpx6uVA/-RcyvvN2aOA.jpg?size=1260x1786&quality=96&sign=0a87bec9adef8beddb0ed6097fb44e1e&type=album">
       </div>
     </section>
     <section>
       <div class="anime-name">
-        <div class="title-ru">Мастера Меча Онлайн: Прогрессив, Скерцо глубокой ночи</div>
-        <div class="title-tr">Sword Art Online: Progressive Movie - Kuraki Yuuyami no Scherzo</div>
+        <div class="title-ru">Песнь ночных сов</div>
+        <div class="title-tr">Yofukashi no Uta</div>
       </div>
     </section>
     <section>
