--- a/anime.html
+++ b/anime.html
@@ -23,7 +23,7 @@
   <main>
     <section class="edit" style="display: none;">
       <div class="edit-syze">
-        <div style="width: 100%;"><a class="back">˂</a>
+        <div style="width: 100%;"><a class="back">🡄</a>
           <div>
             <div class="episode-sel">Выбор эпизода</div>
             <hr>
