--- a/profile.html
+++ b/profile.html
@@ -24,7 +24,7 @@
   <main>
     <section class="edit" style="display: none;">
       <div class="edit-syze">
-        <div style="width: 100%;"><a class="back">🡄</a>
+        <div style="width: 100%;"><a class="back">Назад</a>
           <div>
             <div>Об аккаунте</div>
             <div class="edit-info">
