--- a/anime.html
+++ b/anime.html
@@ -183,7 +183,7 @@
         </svg>
         <small>Главная</small>
       </a>
-      <a class="points-button" href="#">
+      <a class="points-button" href="search.html">
         <svg width="30" height="30" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M20 34.625C28.0772 34.625 34.625 28.0772 34.625 20C34.625 11.9228 28.0772 5.375 20 5.375C11.9228 5.375 5.375 11.9228 5.375 20C5.375 28.0772 11.9228 34.625 20 34.625Z" stroke="currentColor" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"></path>
           <path d="M26.5 13.5L22.4375 22.4375L13.5 26.5L17.5625 17.5625L26.5 13.5Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
