--- a/profile.html
+++ b/profile.html
@@ -26,7 +26,7 @@
       <div class="edit-syze">
         <div style="width: 100%;"><a class="back">Назад</a>
           <div>
-            <div>Об аккаунте</div>
+            <div style="margin-top: 10px;">Об аккаунте</div>
             <div class="edit-info">
               <div><span>Никнейм</span></div>
               <div>
@@ -73,7 +73,8 @@
             </div>
             <hr>
             <div class="edit-info">
-              <div>
+              <div class="edit-info-save">
+                <button>Сохранить</button>
                 <button>Выйти</button>
               </div>
             </div>
