--- a/profile.html
+++ b/profile.html
@@ -48,7 +48,7 @@
             <div class="edit-info">
               <div><span>О себе</span></div>
               <div>
-                <input placeholder="Чилю по жизни">
+                <textarea placeholder="Чилю по жизни"></textarea>
               </div>
             </div>
             <hr>
