--- a/player.html
+++ b/player.html
@@ -22,7 +22,7 @@
 <body class="player">
   <main>
     <div>
-      <iframe src="https://vk.com/video_ext.php?oid=160476900&id=456239877&hash=676b64b9d71babf9" width="100%" height="100%" frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media; fullscreen; picture-in-picture"></iframe>
+      <iframe style="margin-top: 30px;" src="https://vk.com/video_ext.php?oid=160476900&id=456239877&hash=676b64b9d71babf9" width="100%" height="100%" frameborder="0" allowfullscreen="1" allow="autoplay; encrypted-media; fullscreen; picture-in-picture"></iframe>
       <div class="player-btn">
         <a href="#" class="player-prev">
           <div>1 серия</div>
@@ -36,7 +36,14 @@
       </div>
     </div>
   </main>
-</body>
+<script>
+  $(function() {
+    var height = window.innerHeight
+    document.documentElement.clientHeight
+    document.body.clientHeight;
+    $('iframe').height(height-90);
+  });
+</script>
 <footer>
     <div class="buttons">
       <a class="points-button" href="index.html">
@@ -61,5 +68,5 @@
       </a>
     </div>
 </footer>
-
+</body>
 </html>
