--- a/anime.html
+++ b/anime.html
@@ -64,6 +64,15 @@
           </div>
           <section class="otstup2"></section>
     </section>
+    <section class="trailer-anime">
+      <div class="trailer1">
+        <div class="trailer2">
+          <div class="trailer3">
+            <img class="poster" src="https://sun9-81.userapi.com/impg/zd0Lzey35mlkDOwpbKhk7TF5UEhVyXlZpx6uVA/-RcyvvN2aOA.jpg?size=1260x1786&quality=96&sign=0a87bec9adef8beddb0ed6097fb44e1e&type=album">
+          </div>
+        </div>
+      </div>
+    </section>
     <section>
       <div class="anime-poster">
         <img class="poster" src="https://sun9-81.userapi.com/impg/zd0Lzey35mlkDOwpbKhk7TF5UEhVyXlZpx6uVA/-RcyvvN2aOA.jpg?size=1260x1786&quality=96&sign=0a87bec9adef8beddb0ed6097fb44e1e&type=album">
