--- a/anime.html
+++ b/anime.html
@@ -75,7 +75,7 @@
     </section>
     <section>
       <div class="anime-poster">
-        <img class="poster" src="https://sun9-81.userapi.com/impg/zd0Lzey35mlkDOwpbKhk7TF5UEhVyXlZpx6uVA/-RcyvvN2aOA.jpg?size=1260x1786&quality=96&sign=0a87bec9adef8beddb0ed6097fb44e1e&type=album">
+        <a><img class="poster" src="https://sun9-81.userapi.com/impg/zd0Lzey35mlkDOwpbKhk7TF5UEhVyXlZpx6uVA/-RcyvvN2aOA.jpg?size=1260x1786&quality=96&sign=0a87bec9adef8beddb0ed6097fb44e1e&type=album"></a>
       </div>
     </section>
     <section>
