--- a/anime.html
+++ b/anime.html
@@ -64,6 +64,13 @@
           </div>
           <section class="otstup2"></section>
     </section>
+    <section>
+          <div class="png-tyan">
+            <div class="png-tyan-img">
+              <img class="poster" src="https://fumodub.ru/uploads/posts/2022-10/chara-kyuruga.png">
+            </div>
+          </div>
+    </section>
     <section class="trailer-anime">
       <div class="trailer1">
         <div class="trailer2">
